# Praktika2.3

Структура/: CMakeLists.txt
Структура/app/: CMakeLists.txt
Структура/app/src/: main.c
Структура/lib/: CMakeLists.txt
Структура/lib/include/: my_stdio.h
Структура/lib/src/: my_stdio.c
Структура/tests/: CMakeLists.txt  tests.c
